<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homePage.HomePageFragment">


    <View
        android:id="@+id/view2"
        android:layout_width="404dp"
        android:layout_height="410dp"
        android:background="@color/value_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="244dp"
        android:src="@drawable/waves"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="391dp"
        android:layout_height="412dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/shapes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="serif"
        android:text="@string/daily_calories_to_reach_the_goal"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calories_tv"
        android:layout_width="161dp"
        android:layout_height="91dp"
        android:layout_marginTop="36dp"
        android:text=""
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="32dp"
        android:fontFamily="serif"
        android:includeFontPadding="false"
        android:text="@string/daily_steps_to_reach_the_goal"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories_tv" />

    <TextView
        android:id="@+id/steps_tv"
        android:layout_width="145dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:text=""
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:text="protein"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="35dp"
        android:layout_height="20dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="64dp"
        android:text="carb"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="68dp"
        android:text="fat"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <TextView
        android:id="@+id/protein_tv"
        android:layout_width="31dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/carb_tv"
        android:layout_width="36dp"
        android:layout_height="34dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@+id/protein_tv"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/fat_tv"
        android:layout_width="30dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="169dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:text="macros"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="146dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="388dp"
        android:src="@drawable/caloriees"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="154dp"
        android:layout_height="183dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/steps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="155dp"
        android:layout_height="41dp"
        android:layout_marginStart="168dp"
        android:layout_marginBottom="144dp"
        android:gravity="center"
        android:text="@string/steps_goal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/steps_goalEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="11dp"
        android:hint="steps goal"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="83dp"
        android:layout_height="21dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/hello_username"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hello_username"
        android:layout_width="107dp"
        android:layout_height="39dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/username"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/view2" />


</androidx.constraintlayout.widget.ConstraintLayout>