<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.register.RegisterFragment" >

<!--    <com.google.android.material.tabs.TabLayout-->
<!--        android:id="@+id/tabLayout"-->
<!--        android:layout_width="409dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="1dp"-->
<!--        android:layout_marginBottom="1dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/viewPager"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:ignore="SpeakableTextPresentCheck">-->

<!--    </com.google.android.material.tabs.TabLayout>-->

<!--    <androidx.viewpager.widget.ViewPager-->
<!--        android:id="@+id/viewPager"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginStart="1dp"-->
<!--        android:layout_marginEnd="1dp"-->
<!--        android:layout_marginBottom="1dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tabLayout"-->
<!--        tools:ignore="SpeakableTextPresentCheck" />-->

<!--    <EditText-->
<!--        android:id="@+id/username_et"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="69dp"-->
<!--        android:layout_marginTop="70dp"-->
<!--        android:layout_marginEnd="132dp"-->
<!--        android:ems="10"-->
<!--        android:hint="username:"-->
<!--        android:inputType="textPersonName"-->
<!--        android:minHeight="48dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <EditText-->
<!--        android:id="@+id/pass_et"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="64dp"-->
<!--        android:layout_marginTop="92dp"-->
<!--        android:layout_marginEnd="138dp"-->
<!--        android:ems="10"-->
<!--        android:hint="password"-->
<!--        android:inputType="textPassword"-->
<!--        android:minHeight="48dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/username_et"-->
<!--        tools:ignore="SpeakableTextPresentCheck" />-->


    <!--    <EditText-->
<!--        android:id="@+id/confirm_et"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="63dp"-->
<!--        android:layout_marginTop="18dp"-->
<!--        android:layout_marginEnd="138dp"-->
<!--        android:ems="10"-->
<!--        android:hint="confirm password"-->
<!--        android:inputType="textPassword"-->
<!--        android:minHeight="48dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/pass_et"-->
<!--        tools:ignore="SpeakableTextPresentCheck" />-->


    <!--    <EditText-->
<!--        android:id="@+id/email_et"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="59dp"-->
<!--        android:layout_marginTop="94dp"-->
<!--        android:layout_marginEnd="143dp"-->
<!--        android:ems="10"-->
<!--        android:hint="E-mail"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:minHeight="48dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/confirm_et"-->
<!--        tools:ignore="SpeakableTextPresentCheck" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="370dp"
        android:layout_height="77dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="356dp"
            android:layout_height="75dp"
            android:layout_marginEnd="14dp"
            app:boxStrokeColor="@color/value_green"
            app:hintTextColor="@color/value_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/pass_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:hint="@string/password"
                android:inputType="none"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="370dp"
        android:layout_height="77dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="356dp"
            android:layout_height="75dp"
            android:layout_marginEnd="14dp"
            app:boxStrokeColor="@color/value_green"
            app:hintTextColor="@color/value_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/confirm_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:hint="@string/confirm_password"
                android:inputType="none"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/next_iv"
        android:layout_width="117dp"
        android:layout_height="58dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="96dp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="370dp"
        android:layout_height="77dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/next_iv"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="356dp"
            android:layout_height="75dp"
            android:layout_marginEnd="14dp"
            app:boxStrokeColor="@color/value_green"
            app:hintTextColor="@color/value_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:hint="@string/email"
                android:inputType="none"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="370dp"
        android:layout_height="77dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="356dp"
            android:layout_height="75dp"
            android:layout_marginEnd="14dp"
            app:boxStrokeColor="@color/value_green"
            app:hintTextColor="@color/value_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:hint="@string/username"
                android:inputType="none"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="421dp"
        android:layout_height="247dp"
        android:layout_marginBottom="22dp"
        android:src="@drawable/waves"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="580dp"
        android:layout_height="144dp"
        android:layout_marginBottom="68dp"
        android:src="@drawable/valueinapp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>